Sutter Health/src/objects/S3_Reporting_Catalogue__c.object
<CustomObject>
    <description>Junction Object to link Metrics with Report Outs</description>
    <fields>
        <fullName>Link_to_Report__c</fullName>
        <formula>S3_Report_Name__r.Report_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Number__c</fullName>
        <label>Metric Number</label>
        <referenceTo>S3_Ops__c</referenceTo>
        <relationshipLabel>S3 Reporting Catalogue</relationshipLabel>
        <relationshipName>S3_Reporting_Metric</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New_Report__c</fullName>
        <description>Link to create new record from junction object</description>
        <formula>HYPERLINK(&quot;https://cs18.salesforce.com/a0X/e?retURL=%2Fa0X%2Fo&quot;, &quot;Create a New Report Record&quot;)</formula>
        <inlineHelpText>Link to create new record for a report from junction object</inlineHelpText>
        <label>New Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_Report_Name__c</fullName>
        <label>S3 Report Name</label>
        <referenceTo>S3_Reporting__c</referenceTo>
        <relationshipLabel>S3 Reporting Catalogue</relationshipLabel>
        <relationshipName>S3_Report_Name</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SPM_Creation_Effort__c</fullName>
        <formula>S3_Report_Name__r.SPM_Effort__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPM Creation Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>S3 Reporting Catalogue</label>
    <nameField>
        <displayFormat>S3RC{0000}</displayFormat>
        <label>S3 Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3 Reporting Catalogue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>